[tool.poetry]
name = "mad_gui"
version = "0.2.0-alpha.2"
description = "GUI for annotating and processing IMU data."
authors = [
    "Malte Ollenschlaeger <malte.ollenschlaeger@fau.de>",
    "Arne Kuederle <arne.kuederle@fau.de>",
    "Ann-Kristin Seifer <ann-kristin.seifer@fau.de>"
]
readme = "README.md"
homepage = "https://github.com/mad-lab-fau/mad-gui"
repository = "https://github.com/mad-lab-fau/mad-gui"
classifiers = [
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.19.2"
pandas = "^1.2.4"
scipy = "^1.5.2"
pyqtgraph = "0.11.0"
openpyxl = "^3.0.6"
PySide2 = "5.15.1"
pytest = "^6.2.2"
typing-extensions = "^3.10.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
doit = "^0.33.1"
isort = "4.2.5"
pytest-cov = "^2.11.1"
pytest-qt = "^3.3.0"
Sphinx = "^3.5.1"
recommonmark = "^0.7.1"
numpydoc = "^1.1.0"
pydata-sphinx-theme = "^0.6.2"
sphinx-markdown-tables = "^0.0.15"
prospector = "^1.2.0"

[tool.isort]
profile = "black"
skip_glob = ["tests/test_windows/"]

[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
    | \libs
  )/
)
'''

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
