[tool.poetry]
name = "mad_gui"
version = "0.2.0-alpha.6"
description = "GUI for annotating and processing IMU data."
authors = [
    "Malte Ollenschlaeger <malte.ollenschlaeger@fau.de>",
    "Arne Kuederle <arne.kuederle@fau.de>",
    "Ann-Kristin Seifer <ann-kristin.seifer@fau.de>"
]
readme = "README_pypi.md"
homepage = "https://github.com/mad-lab-fau/mad-gui"
repository = "https://github.com/mad-lab-fau/mad-gui"
classifiers = [
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
]


[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
# we just initialize empty Dataframes, so we do not specify a verison here
pandas = "*"  
pyqtgraph = "0.11.0"
PySide2 = "5.15.1"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
openpyxl = "^3.0.6"
pytest = "^6.2.2"
numpy = "^1.19.2"
pandas = "^1.2.4"
black = "^20.8b1"
doit = "^0.33.1"
isort = "4.2.5"
pytest-cov = "^2.11.1"
pytest-qt = "^3.3.0"
Sphinx = "^3.5.1"
recommonmark = "^0.7.1"
numpydoc = "^1.1.0"
pydata-sphinx-theme = "^0.6.2"
sphinx-markdown-tables = "^0.0.15"
prospector ="1.5.1" # older versions might work but also might crash: https://github.com/PyCQA/prospector/issues/438
sphinxemoji = "^0.1.9"

[tool.poetry.scripts]
mad-gui = "mad_gui:start_gui"

[tool.radon]
exclude = "plot_tools/*.py"

[tool.isort]
profile = "black"
skip_glob = ["tests/test_windows/"]

[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
    | \libs
  )/
)
'''

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
